--- a/.github/workflows/_config.yml
+++ b/.github/workflows/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-cayman
+title: E-Library
+show_downloads: true
+include: [CONTRIBUTING.md, CODE_OF_CONDUCT.md]
+plugins:
+  - jemoji
